<?xml version="1.0"?>
<package format="2">
  <name>dhpgmvs</name>
  <version>1.0.0</version>
  <description>The Dual-Hemispherical Photometric Gaussian Mixture-based Visual Servoing package</description>


  <maintainer email="guillaume.caron@u-picardie.fr">Guillaume Caron</maintainer>
  <license>GPLv3</license>
  <author  email="guillaume.caron@u-picardie.fr">Guillaume Caron</author>

     <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>     
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>visp_bridge</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
